Add register function

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -151,10 +151,27 @@
                 android:text="@string/register_input_birthday"/>
 
             <TextView
-                android:id="@+id/country"
+                android:id="@+id/city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/input_birthday"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="@dimen/register_vertical_dimen"
+                android:text="@string/register_city"/>
+            <EditText
+                android:id="@+id/input_city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/city"
+                android:layout_alignParentStart="true"
+                android:inputType="text"
+                android:hint="@string/register_input_city"/>
+
+            <TextView
+                android:id="@+id/country"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/input_city"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
                 android:text="@string/register_country"/>
