--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="login_button_color">#8B572A</color>
     <color name="login_button_forgot_password_color">#5AB0D7</color>
     <color name="login_button_text_color">#F5F5F6</color>
+
+    <color name="home_tab_hightlight">#FFFF8C</color>
+    <color name="home_tab_text_color">#B3FFFFFF</color>
 </resources>
