--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
 
     <color name="home_tab_hightlight">#FFFF8C</color>
     <color name="home_tab_text_color">#B3FFFFFF</color>
+    <color name="home_title_color">#8B572A</color>
 </resources>
