--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="register_vertical_dimen">10dp</dimen>
-    <dimen name="home_vertical_dimen">10dp</dimen>
+    <dimen name="home_vertical_dimen">12dp</dimen>
+    <dimen name="edit_dialog_vertical_dimen">10dp</dimen>
 </resources>
