--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    tools:context="com.terralogic.alexle.ott.controller.LoginActivity">
+    tools:context="com.terralogic.alexle.ott.controller.activities.LoginActivity">
 
     <RelativeLayout
         android:id="@+id/header"
