--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/splash_screen"
-    tools:context="com.terralogic.alexle.ott.controller.SplashActivity">
+    tools:context="com.terralogic.alexle.ott.controller.activities.SplashActivity">
 
 </android.support.constraint.ConstraintLayout>
