--- a/app/src/main/res/layout/fragment_change_password_dialog.xml
+++ b/app/src/main/res/layout/fragment_change_password_dialog.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.terralogic.alexle.ott.controller.ChangePasswordDialogFragment">
+    tools:context="com.terralogic.alexle.ott.controller.dialogs.ChangePasswordDialogFragment">
     <RelativeLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
