--- a/app/src/main/res/layout/fragment_dial.xml
+++ b/app/src/main/res/layout/fragment_dial.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.terralogic.alexle.ott.controller.DialFragment">
+    tools:context="com.terralogic.alexle.ott.controller.fragments.DialFragment">
 
 
 </FrameLayout>
