--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.terralogic.alexle.ott.controller.SettingsFragment">
+    tools:context="com.terralogic.alexle.ott.controller.fragments.SettingsFragment">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
