--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="home_tab_hightlight">#FFFF8C</color>
     <color name="home_tab_text_color">#B3FFFFFF</color>
     <color name="home_title_color">#8B572A</color>
+
+    <color name="divider_color">#a2232323</color>
 </resources>
