--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
     <RelativeLayout
         android:id="@+id/body"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:paddingTop="20dp"
         android:paddingStart="30dp"
@@ -83,16 +83,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:padding="10dp"
             android:text="@string/login_forgot_password"
             android:textColor="@color/login_button_forgot_password_color"/>
 
         <LinearLayout
             android:id="@+id/btn_login"
-            android:layout_above="@+id/btn_register"
-            style="@style/LoginScreenButtonStyle"
+            android:layout_below="@+id/btn_forgot_password"
             android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp">
+            android:layout_marginEnd="30dp"
+            style="@style/LoginScreenButtonStyle">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -104,8 +105,8 @@
 
         <LinearLayout
             android:id="@+id/btn_register"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="11dp"
+            android:layout_below="@+id/btn_login"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             style="@style/LoginScreenButtonStyle">
