--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,7 +21,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
-                android:text="@string/register_email"/>
+                android:text="@string/register_email"
+                android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
@@ -38,7 +39,8 @@
                 android:layout_below="@+id/input_email"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
                 android:layout_alignParentStart="true"
-                android:text="@string/register_password"/>
+                android:text="@string/register_password"
+                android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
@@ -55,7 +57,8 @@
                 android:layout_below="@+id/input_password"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_confirm_password"/>
+                android:text="@string/register_confirm_password"
+                android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_confirm_password"
                 android:layout_width="match_parent"
@@ -72,7 +75,8 @@
                 android:layout_below="@+id/input_confirm_password"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_first_name"/>
+                android:text="@string/register_first_name"
+                android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_first_name"
                 android:layout_width="match_parent"
@@ -89,7 +93,8 @@
                 android:layout_below="@+id/input_first_name"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_last_name"/>
+                android:text="@string/register_last_name"
+                android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_last_name"
                 android:layout_width="match_parent"
@@ -106,7 +111,8 @@
                 android:layout_below="@+id/input_last_name"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_sex"/>
+                android:text="@string/register_sex"
+                android:textSize="@dimen/register_text_size"/>
             <RadioGroup
                 android:id="@+id/group_sex"
                 android:layout_width="wrap_content"
@@ -141,23 +147,30 @@
                 android:layout_below="@+id/group_sex"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_birthday"/>
+                android:text="@string/register_birthday"
+                android:textSize="@dimen/register_text_size"/>
             <TextView
                 android:id="@+id/input_birthday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/birthday"
-                android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_input_birthday"/>
+                android:layout_toEndOf="@+id/birthday"
+                android:layout_alignBottom="@+id/birthday"
+                android:layout_marginStart="10dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:text="@string/register_input_birthday"
+                android:textSize="@dimen/register_text_size"
+                android:textColor="@android:color/black"/>
 
             <TextView
                 android:id="@+id/city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/input_birthday"
+                android:layout_below="@+id/birthday"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_city"/>
+                android:text="@string/register_city"
+                android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_city"
                 android:layout_width="match_parent"
@@ -174,7 +187,8 @@
                 android:layout_below="@+id/input_city"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_country"/>
+                android:text="@string/register_country"
+                android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_country"
                 android:layout_width="match_parent"
