--- a/app/src/main/res/layout/dialog_register_success.xml
+++ b/app/src/main/res/layout/dialog_register_success.xml
@@ -41,7 +41,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/register_success_dialog_OK"
+            android:text="@string/ok"
             android:textColor="@color/login_button_text_color"
             android:textSize="20sp"/>
     </LinearLayout>
