--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
-                android:text="@string/register_email"
+                android:text="@string/register_activity_email"
                 android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_email"
@@ -30,7 +30,7 @@
                 android:layout_below="@+id/email"
                 android:layout_alignParentStart="true"
                 android:inputType="textEmailAddress"
-                android:hint="@string/register_input_email"/>
+                android:hint="@string/register_activity_input_email"/>
 
             <TextView
                 android:id="@+id/password"
@@ -39,7 +39,7 @@
                 android:layout_below="@+id/input_email"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
                 android:layout_alignParentStart="true"
-                android:text="@string/register_password"
+                android:text="@string/register_activity_password"
                 android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_password"
@@ -48,7 +48,7 @@
                 android:layout_below="@+id/password"
                 android:layout_alignParentStart="true"
                 android:inputType="textPassword"
-                android:hint="@string/register_input_password"/>
+                android:hint="@string/register_activity_input_password"/>
 
             <TextView
                 android:id="@+id/confirm_password"
@@ -57,7 +57,7 @@
                 android:layout_below="@+id/input_password"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_confirm_password"
+                android:text="@string/register_activity_confirm_password"
                 android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_confirm_password"
@@ -66,7 +66,7 @@
                 android:layout_below="@+id/confirm_password"
                 android:layout_alignParentStart="true"
                 android:inputType="textPassword"
-                android:hint="@string/register_input_confirm_password"/>
+                android:hint="@string/register_activity_input_confirm_password"/>
 
             <TextView
                 android:id="@+id/first_name"
@@ -75,7 +75,7 @@
                 android:layout_below="@+id/input_confirm_password"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_first_name"
+                android:text="@string/register_activity_first_name"
                 android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_first_name"
@@ -84,7 +84,7 @@
                 android:layout_below="@+id/first_name"
                 android:layout_alignParentStart="true"
                 android:inputType="text"
-                android:hint="@string/register_input_first_name"/>
+                android:hint="@string/register_activity_input_first_name"/>
 
             <TextView
                 android:id="@+id/last_name"
@@ -93,7 +93,7 @@
                 android:layout_below="@+id/input_first_name"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_last_name"
+                android:text="@string/register_activity_last_name"
                 android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_last_name"
@@ -102,7 +102,7 @@
                 android:layout_below="@+id/last_name"
                 android:layout_alignParentStart="true"
                 android:inputType="text"
-                android:hint="@string/register_input_last_name"/>
+                android:hint="@string/register_activity_input_last_name"/>
 
             <TextView
                 android:id="@+id/sex"
@@ -111,7 +111,7 @@
                 android:layout_below="@+id/input_last_name"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_sex"
+                android:text="@string/register_activity_sex"
                 android:textSize="@dimen/register_text_size"/>
             <RadioGroup
                 android:id="@+id/group_sex"
@@ -124,20 +124,20 @@
                     android:id="@+id/sex_male"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/register_male"
+                    android:text="@string/register_activity_male"
                     android:checked="true"/>
                 <RadioButton
                     android:id="@+id/sex_female"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:text="@string/register_female"/>
+                    android:text="@string/register_activity_female"/>
                 <RadioButton
                     android:id="@+id/sex_other"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:text="@string/register_other"/>
+                    android:text="@string/register_activity_other"/>
             </RadioGroup>
 
             <TextView
@@ -147,7 +147,7 @@
                 android:layout_below="@+id/group_sex"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_birthday"
+                android:text="@string/register_activity_birthday"
                 android:textSize="@dimen/register_text_size"/>
             <TextView
                 android:id="@+id/input_birthday"
@@ -158,7 +158,7 @@
                 android:layout_marginStart="10dp"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
-                android:text="@string/register_input_birthday"
+                android:text="@string/register_activity_input_birthday"
                 android:textSize="@dimen/register_text_size"
                 android:textColor="@android:color/black"/>
 
@@ -169,7 +169,7 @@
                 android:layout_below="@+id/birthday"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_city"
+                android:text="@string/register_activity_city"
                 android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_city"
@@ -178,7 +178,7 @@
                 android:layout_below="@+id/city"
                 android:layout_alignParentStart="true"
                 android:inputType="text"
-                android:hint="@string/register_input_city"/>
+                android:hint="@string/register_activity_input_city"/>
 
             <TextView
                 android:id="@+id/country"
@@ -187,7 +187,7 @@
                 android:layout_below="@+id/input_city"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="@dimen/register_vertical_dimen"
-                android:text="@string/register_country"
+                android:text="@string/register_activity_country"
                 android:textSize="@dimen/register_text_size"/>
             <EditText
                 android:id="@+id/input_country"
@@ -196,7 +196,7 @@
                 android:layout_below="@+id/country"
                 android:layout_alignParentStart="true"
                 android:inputType="text"
-                android:hint="@string/register_input_country"/>
+                android:hint="@string/register_activity_input_country"/>
 
             <LinearLayout
                 android:id="@+id/btn_register"
@@ -208,7 +208,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/login_button_register"
+                    android:text="@string/login_activity_button_register"
                     android:textColor="@color/login_button_text_color"
                     android:textSize="15sp"/>
             </LinearLayout>
