--- a/app/src/main/res/layout/fragment_list_device.xml
+++ b/app/src/main/res/layout/fragment_list_device.xml
@@ -2,12 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="20dp"
     tools:context="com.terralogic.alexle.ott.controller.fragments.ListDeviceFragment">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_device"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/btn_add" />
+
     <LinearLayout
         android:id="@+id/btn_add"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="30dp"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="80dp"
         style="@style/AddDeviceButtonStyle">
