Add Connected devices design

--- a/app/src/main/res/layout/fragment_devices.xml
+++ b/app/src/main/res/layout/fragment_devices.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.terralogic.alexle.ott.controller.fragments.DevicesFragment">
-    <TextView
-        android:id="@+id/notification"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/devices_fragment_notification"
-        android:textSize="18sp"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_connected_devices"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true">
+
+    </android.support.v7.widget.RecyclerView>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
