--- a/app/src/main/res/layout/fragment_list_device.xml
+++ b/app/src/main/res/layout/fragment_list_device.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="20dp"
-    tools:context="com.terralogic.alexle.ott.controller.fragments.ListDeviceFragment">
+    tools:context="com.terralogic.alexle.ott.controller.fragments.AvailableDevicesFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_device"
+        android:id="@+id/list_available_devices"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/btn_add" />
