Add Control device function

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="home_tab_text_color">#B3FFFFFF</color>
     <color name="home_title_color">#8B572A</color>
 
-    <color name="settings_fragment_connected_device_bg">#2b9297</color>
+    <color name="devices_fragment_connected_device_bg">#ae5153</color>
 
     <color name="add_device_switch_wifi_text_color">#5a9fd7</color>
 
